implement loader spinnner and beautify layout

--- a/argumentation/templates/argumentation.html
+++ b/argumentation/templates/argumentation.html
@@ -10,11 +10,11 @@
 {% block description %}
     Detects arguments in your text.
 {% endblock %}
-{% block content_results %}
-    {# Put here your markup for displaying the results. #}
+{% block content_result_data %}
+   <p> Data a</p>
 {% endblock %}
-{% block legend_results %}
-    {# Put here your markup for a legend. #}
+{% block content_result_legend %}
+   <h4>Suggested sample questions</h4>
 {% endblock %}
 {% block scripts %}
     {{ super() }}
