--- a/templates/ui-kit/demo_templates/basic_io.template.html
+++ b/templates/ui-kit/demo_templates/basic_io.template.html
@@ -10,11 +10,11 @@
 {% block description %}
     {# One line for for demo description #}
 {% endblock %}
-{% block content_results %}
+{% block content_result_data %}
     {# Put here your markup for displaying the results. #}
 {% endblock %}
-{% block legend_results %}
-    {# Put here your markup for a legend. #}
+{% block content_result_legend %}
+    {# Put here your markup for a legend or description of the result. #}
 {% endblock %}
 {% block scripts %}
     {{ super() }}
