--- a/static/ui-kit/custom/scss/basic-io-layout.scss
+++ b/static/ui-kit/custom/scss/basic-io-layout.scss
@@ -1,11 +1,60 @@
 @import 'common/variables';
 
 /*
+* Tab layout start
+*/
+
+.aix-row > div {
+  padding-right: 16px;
+  &:last-of-type {
+    padding-left: 16px;
+  }
+}
+
+.aix-data-input-content {
+  margin-top: $padding-large;
+}
+
+.aix-result-content {
+  margin-top: $padding-large;
+  min-height: 491px;
+}
+
+.aix-result-content-inner {
+  padding: $padding-small $padding-medium $padding-small $padding-medium;
+  border: 1px solid #fff;
+  > p {
+    font-size: 32px;
+    letter-spacing: -1px;
+    line-height: 48px;
+    font-weight: 300;
+  }
+}
+
+.aix-result-content-inner--legend {
+  background-color: $light-gray;
+  padding: $padding-large;
+  > h4 {
+    font-weight: 600;
+    flex-grow: 1;
+    margin-bottom: $padding-medium;
+  }
+}
+
+.aix-invisible {
+  display: none;
+}
+
+/*
+* Tab layout end
+*/
+
+/*
 * Samples start
 */
 
 .sample-container {
-  padding: $padding-large;
+  padding: $padding-large $padding-large 0 $padding-large;
 }
 
 .sample-container__header {
@@ -13,6 +62,7 @@
   > h4 {
     font-weight: 600;
     flex-grow: 1;
+    margin-bottom: $padding-medium;
   }
 }
 
@@ -41,7 +91,8 @@
 
 /*
 * Sample loader start
- */
+*/
+
 .sample-data-loader {
   display: flex;
   justify-content: center;
@@ -54,20 +105,30 @@
 
 }
 
-#tab-results {
-  display: none;
-}
-
 .aix-textarea {
-  margin-top: $padding-large;
   margin-bottom: $padding-medium;
-  height: 400px !important;
+  height: 427px !important;
   > textarea {
     margin-top: 0 !important;
-    height: 400px !important;
-    font-size: 24px !important;
-    line-height: 34px !important;
-    letter-spacing: -0.35px !important;
-    font-weight: 300 !important;
+    padding: $padding-small $padding-medium $padding-small $padding-medium;
+    height: 427px !important;
+    font-size: 32px;
+    letter-spacing: -1px;
+    line-height: 48px;
+    font-weight: 300;
   }
+}
+
+/*
+* Sample loader end
+*/
+
+/*
+* Loader spinner
+ */
+
+.aix-loader {
+  position: absolute;
+  top: 36px;
+  right: 40px;
 }
