disable inputfield while loading

--- a/static/ui-kit/custom/scss/basic-io-layout.scss
+++ b/static/ui-kit/custom/scss/basic-io-layout.scss
@@ -116,6 +116,10 @@
     letter-spacing: -1px;
     line-height: 48px;
     font-weight: 300;
+    &:disabled {
+      background-color: white;
+      color: $dark-gray;
+    }
   }
 }
 
