--- a/templates/ui-kit/basic_io_layout.html
+++ b/templates/ui-kit/basic_io_layout.html
@@ -26,7 +26,7 @@
         <div class="col-lg-6">
             <div class="sample-container aix-data-input-content aix-invisible">
                 <div class="sample-container__header">
-                    <h4>Suggested sample questions</h4>
+                    <h4>Samples</h4>
                     <i id="btn-refresh" class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal"
                        aria-hidden="true"></i>
                 </div>
