added dynamic placeholder and button text anf fixed input sent bug

--- a/templates/ui-kit/basic_io_layout.html
+++ b/templates/ui-kit/basic_io_layout.html
@@ -18,9 +18,9 @@
         <div class="col-lg-6">
             <div class="aix-data-input-content">
                 <div class="input-field input-multiline aix-textarea">
-                    <textarea id="input-submit" placeholder="Enter a text or choose one of our samples."></textarea>
+                    <textarea id="input-submit" placeholder=""></textarea>
                 </div>
-                <input id="btn-submit" class="button button--primary button--full" type="submit" value="Submit">
+                <input id="btn-submit" class="button button--primary button--full" type="submit" value="">
             </div>
         </div>
         <div class="col-lg-6">
