--- a/static/ui-kit/custom/scss/basic-io-layout.scss
+++ b/static/ui-kit/custom/scss/basic-io-layout.scss
@@ -1,7 +1,7 @@
 @import 'common/variables';
 
 /*
-* Tab layout start
+* Layout start
 */
 
 .aix-row > div {
@@ -11,18 +11,12 @@
   }
 }
 
-.aix-data-input-content {
-  margin-top: $padding-large;
-}
-
 .aix-result-content {
-  margin-top: $padding-large;
-  min-height: 491px;
-}
-
-.aix-result-content-inner {
   padding: $padding-small $padding-medium $padding-small $padding-medium;
-  border: 1px solid #fff;
+  border: 1px solid #d6d6d6;
+  border-radius: 4px;
+  height: 470px;
+  margin-bottom: $padding-medium;
   > p {
     font-size: 32px;
     letter-spacing: -1px;
@@ -31,9 +25,10 @@
   }
 }
 
-.aix-result-content-inner--legend {
+.aix-result-content--legend {
   background-color: $light-gray;
   padding: $padding-large;
+  border: none;
   > h4 {
     font-weight: 600;
     flex-grow: 1;
@@ -46,7 +41,7 @@
 }
 
 /*
-* Tab layout end
+* Layout end
 */
 
 /*
@@ -107,11 +102,11 @@
 
 .aix-textarea {
   margin-bottom: $padding-medium;
-  height: 427px !important;
+  height: 470px !important;
   > textarea {
     margin-top: 0 !important;
     padding: $padding-small $padding-medium $padding-small $padding-medium;
-    height: 427px !important;
+    height: 470px !important;
     font-size: 32px;
     letter-spacing: -1px;
     line-height: 48px;
@@ -123,16 +118,58 @@
   }
 }
 
+.aix-button {
+  height: 48px;
+  display: flex;
+  justify-content: center;
+}
+
+.aix-button--processing {
+  background-color: #1781e3 !important;
+}
+
 /*
 * Sample loader end
 */
 
 /*
-* Loader spinner
- */
+* Ellipsis loader start
+*/
 
-.aix-loader {
-  position: absolute;
-  top: 36px;
-  right: 40px;
+@keyframes blink {
+  0% {
+    opacity: 0.3;
+  }
+  20% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.2;
+  }
 }
+
+.ellipsis-loader {
+  display: flex;
+  > div {
+    animation-name: blink;
+    animation-duration: 1.6s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background-color: #fff;
+  }
+  > div:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+  > div:nth-child(3) {
+    animation-delay: 0.4s;
+    margin: 0;
+  }
+}
+
+/*
+* Ellipsis loader end
+*/
