--- a/argumentation/templates/argumentation.html
+++ b/argumentation/templates/argumentation.html
@@ -10,11 +10,14 @@
 {% block description %}
     Detects arguments in your text.
 {% endblock %}
+{% block samples %}
+    {{ super() }}
+{% endblock %}
 {% block content_result_data %}
-   <p> Data a</p>
+    <p> Data a</p>
 {% endblock %}
 {% block content_result_legend %}
-   <h4>Suggested sample questions</h4>
+    <h4>Suggested sample questions</h4>
 {% endblock %}
 {% block scripts %}
     {{ super() }}
