--- a/templates/ui-kit/basic_io_layout.html
+++ b/templates/ui-kit/basic_io_layout.html
@@ -41,8 +41,8 @@
     </div>
     <div id="tab-results" class="row aix-row aix-invisible">
         <div class="col-lg-6">
-            <div class="aix-result-content">
-                {% block content_result_data %}{% endblock %}
+            <div id="aix-result-data" class="aix-result-content">
+                {#Data passed through showResults method will be added here automatically#}
             </div>
             <button id="btn-try-another" class="button button--secondary button--full">Try another text</button>
         </div>
