--- a/templates/ui-kit/demo_templates/basic_io.template.html
+++ b/templates/ui-kit/demo_templates/basic_io.template.html
@@ -32,12 +32,49 @@
     </div>#}
 {% endblock %}
 
-{% block content_result_data %}
-    {# Put here your markup for displaying the results. #}
-{% endblock %}
-
 {% block content_result_legend %}
     {# Put here your markup for a legend or description of the result. #}
+    <h4>Legend</h4>
+    <div class="row">
+        <div class="col-xs-12 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled orchid" aria-hidden="true"></i>
+                <span class="font--semi-bold">Class orchid</span>
+            </span>
+            <span class="aix-legend-item-description">If the class is not self explanatory there is some additional space. This text can also go over multiple lines.</span>
+        </div>
+        <div class="col-xs-12 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled iris" aria-hidden="true"></i>
+                <span class="font--semi-bold">Class iris</span>
+            </span>
+            <span class="aix-legend-item-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</span>
+        </div>
+        <div class="col-xs-12 col-lg-6 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled pink" aria-hidden="true"></i>
+                <span>Class – pink</span>
+            </span>
+        </div>
+        <div class="col-xs-12 col-lg-6 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled turquoise" aria-hidden="true"></i>
+                <span>Class – turquoise</span>
+            </span>
+        </div>
+        <div class="col-xs-12 col-lg-6 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled apple" aria-hidden="true"></i>
+                <span>Class – apple</span>
+            </span>
+        </div>
+        <div class="col-xs-12 col-lg-6 aix-legend">
+            <span>
+                <i class="icon icon-064-record-filled petrol" aria-hidden="true"></i>
+                <span>Class – petrol</span>
+            </span>
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
