--- a/templates/ui-kit/basic_io_layout.html
+++ b/templates/ui-kit/basic_io_layout.html
@@ -12,7 +12,7 @@
                           placeholder="{% block input_placeholder_text %}Enter a text or choose one of our samples.{% endblock %}"></textarea>
             </div>
             <button id="btn-submit" class="aix-button button button--primary button--full disabled">
-                <span>{% block submit_button_text %}{% endblock %}</span>
+                <span>{% block submit_button_text %}Submit{% endblock %}</span>
                 <div class="ellipsis-loader aix-invisible">
                     <div></div>
                     <div></div>
@@ -42,7 +42,7 @@
     <div id="tab-results" class="row aix-row aix-invisible">
         <div class="col-lg-6">
             <div id="aix-result-data" class="aix-result-content">
-                {#Data passed through showResults method will be added here automatically#}
+                {#Data passed through showResults method will be added here automatically #}
             </div>
             <button id="btn-try-another" class="button button--secondary button--full">Try another text</button>
         </div>
