--- a/templates/ui-kit/chatbot_layout.html
+++ b/templates/ui-kit/chatbot_layout.html
@@ -9,10 +9,11 @@
         <div class="col-md-6">
             <div class="chat-area">
                 <div id="chat-data" class="chat-area__history">
-                    {# Speech bubbles will be added here automatically.#}
+                    {# Speech bubbles will be added here automatically. #}
                 </div>
                 <div class="input-field input-field--static-label chat-area__input" data-init="auto">
-                    <input id="input-submit" type="text" id="static-label-input-1" placeholder="Ask a question">
+                    <input id="input-submit" type="text" id="static-label-input-1"
+                           placeholder="{% block input_placeholder_text %}Ask a question{% endblock %}">
                     <button id="btn-submit" class="button button--primary send-button ">
                         <img src="{{ url_for('static', filename='ui-kit/custom/assets/send.svg') }}"/>
                     </button>
@@ -20,19 +21,22 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div class="sample-container">
-                <div class="sample-container__header">
-                    <h4>Suggested sample questions</h4>
-                    <i id="btn-refresh" class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal"
-                       aria-hidden="true"></i>
+            {% block samples %}
+                <div class="sample-container">
+                    <div class="sample-container__header">
+                        <h4>Suggested sample questions</h4>
+                        <i id="btn-refresh"
+                           class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal"
+                           aria-hidden="true"></i>
+                    </div>
+                    <div class="sample-data-loader">
+                        <div class="loader-spinner loader-spinner--large loader-spinner--plain"></div>
+                    </div>
+                    <div id="sample-data" class="row">
+                        {# Samples will be added here automatically #}
+                    </div>
                 </div>
-                <div class="sample-data-loader">
-                    <div class="loader-spinner loader-spinner--large loader-spinner--plain"></div>
-                </div>
-                <div id="sample-data" class="row">
-                    {# Samples will be added here automatically#}
-                </div>
-            </div>
+            {% endblock %}
         </div>
     </div>
 {% endblock %}
