--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
             <div class="col-md-10"><center><span id="welcome">Welcome to the AIMLX Swisscom demos!</span></center></div>
             <div class="col-md-1"></div>
         </div>
+        <div class="group_title"> WORKING PROJECTS </div>
         <div class="row" id="working">
             <div class="col-md-1"></div>
             <div class="col-md-5">
@@ -41,10 +42,10 @@
                 <div class="demo_url"><a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
                 <div class="demo_url"><a href="/kp">/kp</a></div>
                 <div class="demo_url"><a href="/kp/emb">/kp/emb</a></div>
-                <div class="demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
                 <div class="demo_url"><a href="/ner">/ner</a></div>
                 <div class="demo_url"><a href="/summary">/summary</a></div>
                 <div class="demo_url"><a href="/sfid">/sfid</a></div>
+                <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
                 <div class="demo_url"><a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
                 <div class="demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="demo_url"><a href="/grocery">/grocery</a></div>
@@ -66,8 +67,8 @@
                 </div>
             </div>
             <div class="col-md-5">
+                    <div class="demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
                     <div class="demo_url"><a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
-                    <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
                     <div class="demo_url"><a href="/opinion">/opinion</a></div>
                     <div class="demo_url"><a href="/churn">/churn</a></div>
                     <div class="demo_url"><a href="/gsw">/gsw</a></div>
