--- a/sfid/templates/sfid.html
+++ b/sfid/templates/sfid.html
@@ -1,13 +1,15 @@
 {% extends "ui-kit/chatbot_layout.html" %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
-{% block title %}
-    Slot Filling and Intent Detection
-{% endblock %}
-{% block description %}
-    This is a demo description.
-{% endblock %}
+
+{% block head %}{{ super() }}{% endblock %}
+
+{% block title %}Slot Filling & Intent Detection{% endblock %}
+
+{% block description %}This is a demo description.{% endblock %}
+
+{% block input_placeholder_text %}{{ super() }}{% endblock %}
+
+{% block samples %}{{ super() }}{% endblock %}
+
 {% block scripts %}
     {{ super() }}
     <script src="{{ url_for('sfid.static', filename='sfid.js') }}"></script>
