--- a/templates/ui-kit/chatbot_layout.html
+++ b/templates/ui-kit/chatbot_layout.html
@@ -12,8 +12,7 @@
                     {# Speech bubbles will be added here automatically. #}
                 </div>
                 <div class="input-field input-field--static-label chat-area__input" data-init="auto">
-                    <input id="input-submit" type="text" id="static-label-input-1"
-                           placeholder="{% block input_placeholder_text %}Ask a question{% endblock %}">
+                    <input id="input-submit" type="text" id="static-label-input-1" placeholder="{% block input_placeholder_text %}Ask me a question.{% endblock %}">
                     <button id="btn-submit" class="button button--primary send-button ">
                         <img src="{{ url_for('static', filename='ui-kit/custom/assets/send.svg') }}"/>
                     </button>
