--- a/templates/ui-kit/demo_templates/basic_io.template.html
+++ b/templates/ui-kit/demo_templates/basic_io.template.html
@@ -6,13 +6,9 @@
     <link rel="stylesheet" href="{{ url_for('yourdemo.static', filename='yourdemo.css') }}"> #}
 {% endblock %}
 
-{% block title %}
-    {# Enter here your demo title. Keep it short. There is extra space for a description below. #}
-{% endblock %}
+{% block title %}{# Enter here your demo title. Keep it short. There is extra space for a description below. #}{% endblock %}
 
-{% block description %}
-    {# One line for for demo description #}
-{% endblock %}
+{% block description %}{# One line for for demo description #}{% endblock %}
 
 {% block input_placeholder_text %}{# Customize the input field placeholder text. #}{% endblock %}
 
