hide refresh button if there are not enough samples

--- a/templates/ui-kit/chatbot_layout.html
+++ b/templates/ui-kit/chatbot_layout.html
@@ -25,7 +25,7 @@
                     <div class="sample-container__header">
                         <h4>Samples</h4>
                         <i id="btn-refresh"
-                           class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal"
+                           class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal aix-invisible"
                            aria-hidden="true"></i>
                     </div>
                     <div class="sample-data-loader">
