--- a/static/ui-kit/custom/scss/basic-io-layout.scss
+++ b/static/ui-kit/custom/scss/basic-io-layout.scss
@@ -12,7 +12,7 @@
 }
 
 /*
-* Basic IO Layout start
+* Basic IO layout start
 */
 
 .aix-result-content {
@@ -70,7 +70,7 @@
 }
 
 /*
-* Basic IO Layout end
+* Basic IO layout end
 */
 
 /*
@@ -121,7 +121,7 @@
 */
 
 /*
-* Ellipsis loader  in button  start
+* Ellipsis loader in button start
 */
 
 @keyframes blink {
